Add and Remove wishlist items done, touched some CSS

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,79 @@
     transform: rotate(360deg);
   }
 }
+
+
+#pageHeader {
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  background: transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;  
+  /* background: rgb(214, 247, 97); */
+  width: 100%;
+  height: auto;
+
+  /* z-index: 1 */
+}
+
+#topMenuLinks {
+  clear: both;
+  position: sticky;
+   top: 0px;
+   z-index: 1;
+}
+
+
+nav ul {
+  /* display: flex; */
+  font-size: 1.2em; 
+  line-height: 30px; 
+  /* height: 30px; */
+  padding: 0px 0px;
+  width: 100%;
+  /* background: rgb(214, 247, 97); */
+  /* position: sticky; */
+  /* top: 0; */
+  
+}
+
+nav li {
+  list-style:  none;
+  width: 100%; 
+  display: block;
+  /* float: left; */
+position: relative;
+  border-style: outset;
+  /* background: rgb(214, 247, 97); */
+}
+
+nav li a {
+  display: block;
+  line-height: 20px;
+
+}
+nav li a.active {
+  display: block;
+  line-height: 20px;
+  /* border-color: green; */
+  border-style: solid;
+}
+
+div .WishListCard {
+  margin-top: 0%;
+  margin-bottom: -1%;
+  
+  width: 35%;
+  height: 30%;
+}
+
+.WishlistCardImg{
+  max-width: 50%;
+  max-height:50%;
+  width: auto;
+  height: auto;
+}
