Signup done, as well as viewing events and the wishlists of gift getters for those events

--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,13 @@ div .WishListCard {
   width: auto;
   height: auto;
 }
+.WishlistCardImgINGRID{
+  max-width: 100px;
+  max-height:50%;
+  width: auto;
+  height: auto;
+}
+
+.changePoiterToFinger{
+  cursor: pointer;
+}
